--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@tailwindcss/postcss": "^4.1.12",
         "axios": "^1.12.2",
+        "number-to-words": "^1.2.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
