--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
         "preview": "vite preview --port 3000"
     },
     "dependencies": {
+        "@react-pdf/renderer": "^4.3.1",
         "@tailwindcss/postcss": "^4.1.12",
         "axios": "^1.12.2",
+        "buffer": "^6.0.3",
         "number-to-words": "^1.2.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
