--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
         "preview": "vite preview --port 3000"
     },
     "dependencies": {
+        "@headlessui/react": "^2.2.9",
+        "@heroicons/react": "^2.2.0",
         "@react-pdf/renderer": "^4.3.1",
         "@tailwindcss/postcss": "^4.1.12",
         "axios": "^1.12.2",
