--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "@tailwindcss/postcss": "^4.1.12",
         "axios": "^1.12.2",
         "buffer": "^6.0.3",
+        "jwt-decode": "^4.0.0",
         "number-to-words": "^1.2.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
